src/app/components/message-box/message-box.component.scss
@import '../../../styles.scss';

.message-box-wrapper {
    position: relative;
    width: 100%;
    height: 145px;
    display: flex;
    gap: 20px;
    margin: 45px 0;

    @media screen and (max-width: 880px) {
        flex-direction: column;
        height: auto;
    }

    @media screen and (max-width: 768px) and (max-height: 600px) {
        margin: 15px 0;
    }

    .reaction-container {
        width: 100%;
        height: 100vh;
        position: absolute;
        top: -435px;
        left: -160px;
        z-index: 1000;

        emoji-mart {
            position: absolute;
            left: 40%;
        }
    }
}

.main-container {
    border: 1px solid $purple-light;
    border-radius: 20px;
    padding: 20px;
    height: 145px;
}

.message-box-container {
    @extend .main-container;
    flex: 1;
    position: relative;
    display: flex;
    flex-direction: column;
    gap: 40px;
    padding: 20px;

    input {
        font-size: 18px;
        font-weight: 400;
        line-height: 24.55px;

    }

    .message-box-footer {
        display: flex;
        align-items: center;
        justify-content: space-between;

        .message-box-actions {
            display: flex;
            position: relative;
            gap: 5px;

            button {
                color: $grey;
                display: flex;
                align-items: center;
                justify-content: center;
                padding: 8px;

                span {
                    font-size: 24px;
                }

                &:hover {
                    color: $purple-blue-bright;
                    background-color: $violet-bright;
                    border-radius: 20px;
                }

                &:first-child::after {
                    content: '';
                    position: absolute;
                    left: 46px;
                    height: 40px;
                    width: 1px;
                    background-color: $grey;
                }
            }


        }

        .send-btn {
            color: $purple-blue;
            width: 40px;
            height: 40px;

            &:disabled {
                opacity: 0.5;
            }

        }
    }

    .members-list {
        position: absolute;
        left: 0;
        bottom: calc(100% + 0.5px);
        padding: 12px 20px;
        max-width: 400px;
        max-height: 354px;
        width: 100%;
        box-shadow: 0 2px 12px rgba(0, 0, 0, 0.18);
        border-radius: 20px 20px 0 20px;
        background: white;
        list-style-type: none;
        font-size: 21px;
        display: flex;
        flex-direction: column;
        gap: 10px;
        overflow-y: auto;
        animation: expand 225ms ease;
        @include scrollbar();

        @keyframes expand {
            from {
                max-height: 0;
            }

            to {
                max-height: 354px;
            }
        }

        li {
            padding: 8px 10px;
            width: 100%;
            height: 58px;
            border-radius: 30px;
            display: flex;
            align-items: center;
            cursor: pointer;
            @include transition(75ms);

            img {
                margin-left: -5px;
                margin-right: 15px;
                width: 50px;
                height: 50px;
                border-radius: 50%;
                object-fit: cover;
            }

            span {
                width: 100%;
                @include textOverflowMulti();
            }

            &:hover {
                color: $purple-blue-bright;
                background-color: $violet-bright;
            }
        }
    }
}

.attachment-container {
    @extend .main-container;
    width: 145px;
    display: flex;
    flex-direction: column;
    position: relative;
    justify-content: space-between;
    gap: 4px;

    @media screen and (max-width: 880px) {
        width: auto;
        height: fit-content;
        align-items: center;
    }

    button {
        position: absolute;
        top: 26px;
        right: 26px;
        width: 20px;
        height: 20px;
        border-radius: 50%;
        font-size: 16px;
        color: $grey;
        background-color: rgba(239, 239, 239, 0.8);
        cursor: pointer;
        display: flex;
        justify-content: center;
        align-items: center;
        @include transition(75ms);

        &:hover {
            color: $purple-blue-bright;
            background-color: $violet-bright;
            box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.2);
        }
    }

    .img-thumb,
    .pdf-icon-wrapper {
        max-width: 100%;
        height: auto;
        max-height: 120px;
        object-fit: cover;
        display: flex;
        justify-content: center;

        @media screen and (max-width: 880px) {
            object-fit: contain;
        }

        .pdf-icon {
            margin-top: 23px;
            width: 36px;
            height: auto;
        }
    }

    .file-name,
    .file-name i {
        max-width: 100%;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
        color: $grey;
    }
}

